--- a/sign-up/style.css
+++ b/sign-up/style.css
@@ -14,7 +14,7 @@
     background-color: rgba(182, 182, 182, 0.24);
     color: black;
     margin: 5px 0;
-    border: none;
+    border: 1px solid white
 }
 .input-field {
     width: 100%;
@@ -25,13 +25,13 @@
 .label-input {
     margin-left:20px;
     color: white;
-
+    font-size: 18px;
 }
 
 #submit {
     padding: 12px 60px;
     border-radius: 50px;
-    background-color: rgba(182, 182, 182, 0.24);
+    background-color: #BA586F;
     margin-top: 10px;
     cursor: pointer;
     border: none;
@@ -47,11 +47,12 @@
 .log-in-field a{
     /* text-decoration: none; */
     color: aliceblue;
+    font-size: 16px;
 }
 
 .form-field {
     width: 100%;
-    border: 1px solid gray;
+    border: 1px solid whitesmoke;
     /* box-shadow: 0px 5px 20px 5px; */
     padding: 20px;
     border-radius: 12px;
@@ -80,6 +81,8 @@
     background-color: rgba(182, 182, 182, 0.24);
     cursor: pointer;
     border: none;
+    color: white;
+
 }
 #male{
     cursor: pointer;
@@ -87,6 +90,9 @@
 #female{
     cursor: pointer;
     margin-left: 10px;
+}
+::placeholder{
+    color: white;
 }
 .others-info{
     margin-top: 10px;
@@ -97,4 +103,18 @@
 }
 .gender-info{
     color: white;
+}
+.name-input{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+}
+/* .name-input-title{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+} */
+#last-name{
+    padding-left: 75px;
 }
